--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -462,7 +462,7 @@
                 <br>
                 <br>
                 <br>
-                <div onclick="this.remove()" class="photol"><img src="Red_copy_of_the_Russian_constitution.jpg" alt=""
+                <div  class="photol"><img src="Red_copy_of_the_Russian_constitution.jpg" alt=""
                         width="250px">
                     <figcaption>Специальный экземпляр Конституции Российской Федерации</figcaption>
                 </div>
