--- a/country/ukraine/gos-system/index.html
+++ b/country/ukraine/gos-system/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="/political-na-postsovet-space//country/ukraine/style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/ukraine/style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -35,51 +36,58 @@
     </header>
     <main>
         <div class="container">
+            <div class="dr">
+                <h1>Государственное устройство</h1>
+                <hr>
+                <p>
+                    Государственный строй Украины определён Конституцией, принятой парламентом 28 июня 1996 года.
+                </p>
+                <p>
+                    Украина представляет собой унитарную парламентско-президентскую республику. Правительство — Кабинет
+                    министров Украины. Высший законодательный орган — Верховная рада Украины.
+                </p>
+                <p>
+                    Сразу после провозглашения независимости Украины, благодаря референдуму 1991 года, на Украине была
+                    образована парламентская комиссия по подготовке новой конституции. 28 июня 1996 года, с принятием
+                    новой
+                    демократической конституции, была основана многопартийная политическая система (плюрализм) и
+                    декларированы основные права и свободы граждан Украины, а также национальных меньшинств страны.
+                </p>
+                <p>
+                    Согласно Конституции, государственным языком на Украине является украинский язык. Этническим группам
+                    населения Украины гарантируется право на получение образования на родном языке, на развитие
+                    культуры, а
+                    также на поддержку и использование национальных языков в повседневной жизни. Сфера и масштабы
+                    применения
+                    украинского языка определены Законом от 25 апреля 2019 года № 2704-VIII «Об обеспечении
+                    функционирования
+                    украинского языка как государственного».
+                </p>
+                <h2>Государственная власть</h2>
+                <p>
+                    Статья 6 Конституции Украины устанавливает, что государственная власть на Украине осуществляется по
+                    принципу её разделения на законодательную, исполнительную и судебную. Органы законодательной,
+                    исполнительной и судебной власти осуществляют свои полномочия в установленных настоящей Конституцией
+                    пределах и в соответствии с законами Украины.
+                </p>
+                <h3>Исполнительная власть</h3>
+                <p>
+                    Исполнительную власть на Украине осуществляют президент Украины и Кабинет министров Украины —
+                    правительство.
+                </p>
+                <h4>Президент Украины</h4>
+                <p>
+                    Главой украинского государства, согласно статье 102 Конституции Украины, является президент Украины.
 
-            <h1>Государственное устройство</h1>
-            <hr>
-            <p>
-                Государственный строй Украины определён Конституцией, принятой парламентом 28 июня 1996 года.
-            </p>
-            <p>
-                Украина представляет собой унитарную парламентско-президентскую республику. Правительство — Кабинет
-                министров Украины. Высший законодательный орган — Верховная рада Украины.
-            </p>
-            <p>
-                Сразу после провозглашения независимости Украины, благодаря референдуму 1991 года, на Украине была
-                образована парламентская комиссия по подготовке новой конституции. 28 июня 1996 года, с принятием новой
-                демократической конституции, была основана многопартийная политическая система (плюрализм) и
-                декларированы основные права и свободы граждан Украины, а также национальных меньшинств страны.
-            </p>
-            <p>
-                Согласно Конституции, государственным языком на Украине является украинский язык. Этническим группам
-                населения Украины гарантируется право на получение образования на родном языке, на развитие культуры, а
-                также на поддержку и использование национальных языков в повседневной жизни. Сфера и масштабы применения
-                украинского языка определены Законом от 25 апреля 2019 года № 2704-VIII «Об обеспечении функционирования
-                украинского языка как государственного».
-            </p>
-            <h2>Государственная власть</h2>
-            <p>
-                Статья 6 Конституции Украины устанавливает, что государственная власть на Украине осуществляется по
-                принципу её разделения на законодательную, исполнительную и судебную. Органы законодательной,
-                исполнительной и судебной власти осуществляют свои полномочия в установленных настоящей Конституцией
-                пределах и в соответствии с законами Украины.
-            </p>
-            <h3>Исполнительная власть</h3>
-            <p>
-                Исполнительную власть на Украине осуществляют президент Украины и Кабинет министров Украины —
-                правительство.
-            </p>
-            <h4>Президент Украины</h4>
-            <p>
-                Главой украинского государства, согласно статье 102 Конституции Украины, является президент Украины.
-
-                Президент Украины является гарантом государственного суверенитета, территориальной целостности Украины,
-                соблюдения Конституции Украины, прав и свобод человека и гражданина. В установленном конституцией
-                порядке он обеспечивает государственную независимость и безопасность государства. В соответствии с
-                Конституцией Украины президент осуществляет руководство внешнеполитической деятельностью государства.
-            </p>
-            <h5>Список пезидентов Украины</h5>
+                    Президент Украины является гарантом государственного суверенитета, территориальной целостности
+                    Украины,
+                    соблюдения Конституции Украины, прав и свобод человека и гражданина. В установленном конституцией
+                    порядке он обеспечивает государственную независимость и безопасность государства. В соответствии с
+                    Конституцией Украины президент осуществляет руководство внешнеполитической деятельностью
+                    государства.
+                </p>
+                <h5>Список пезидентов Украины</h5>
+            </div>
             <div class="trf">
                 <table border="1" rules="all" class="table text-info table-bordered" style="width: 100%;">
                     <thead class="table-primary">
