--- a/country/ukraine/index.html
+++ b/country/ukraine/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/ukraine/gerb-of-ukraine.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -35,31 +36,36 @@
     </header>
     <main>
         <div class="container">
-            <h1>Украи́на</h1>
-            <hr>
+            <div class="dr">
+                <h1>Украи́на</h1>
+                <hr>
 
 
-            <p>
-                Украи́на — государство в Восточной и частично Центральной Европе. Население,
-                по итогам переписи 2001 года, составляло 48 240 902 постоянных жителя и 48 457 102 человека
-                наличного населения, по оценкам государственной службы статистики Украины на 1 сентября 2020 года —
-                41 554 361 постоянных жителя и 41 723 998 человек наличного населения. Территория в пределах
-                международно-признанных грани — 603 549 км². Занимает 38-е место в мире по численности
-                населения, 44-е по территории. Украина является первым по
-                размеру территории европейским государством, целиком находящимся в Европе.
-            </p>
-            <p>
-                Столица — Киев. Государственный язык — украинский.
-            </p>
-            <p>
-                Украина — унитарное государство и парламентско-президентская республика. Должность президента с 20 мая
-                2019 года занимает Владимир Зеленский, премьер-министра с 4 марта 2020 года — Денис Шмыгаль.
-            </p>
-            <p>
-                Объём ВВП за 2019 год, рассчитанный по паритету покупательной способности (ППС) составил 560 млрд
-                долларов (13442 на душу населения). Номинальный ВВП в том же году составил 154,69 млрд долларов (3706 на
-                душу населения), занимая по показателю ВВП на душу населения (номинальному и по ППС) предпоследнее место
-                в Европе. Денежная единица — гривна (UAH).
+                <p>
+                    Украи́на — государство в Восточной и частично Центральной Европе. Население,
+                    по итогам переписи 2001 года, составляло 48 240 902 постоянных жителя и 48 457 102 человека
+                    наличного населения, по оценкам государственной службы статистики Украины на 1 сентября 2020 года —
+                    41 554 361 постоянных жителя и 41 723 998 человек наличного населения. Территория в пределах
+                    международно-признанных грани — 603 549 км². Занимает 38-е место в мире по численности
+                    населения, 44-е по территории. Украина является первым по
+                    размеру территории европейским государством, целиком находящимся в Европе.
+                </p>
+                <p>
+                    Столица — Киев. Государственный язык — украинский.
+                </p>
+                <p>
+                    Украина — унитарное государство и парламентско-президентская республика. Должность президента с 20
+                    мая
+                    2019 года занимает Владимир Зеленский, премьер-министра с 4 марта 2020 года — Денис Шмыгаль.
+                </p>
+                <p>
+                    Объём ВВП за 2019 год, рассчитанный по паритету покупательной способности (ППС) составил 560 млрд
+                    долларов (13442 на душу населения). Номинальный ВВП в том же году составил 154,69 млрд долларов
+                    (3706 на
+                    душу населения), занимая по показателю ВВП на душу населения (номинальному и по ППС) предпоследнее
+                    место
+                    в Европе.
+            </div> Денежная единица — гривна (UAH).
             </p>
             <p>
                 Независимость страны от СССР, союзной республикой которого Украина была с декабря 1922 года,
@@ -79,7 +85,7 @@
                 севере с Белоруссией (1084 км), на западе с Польшей (542 км), Словакией (98 км), Венгрией (135 км), на
                 юго-западе с Молдавией (1202 км, из них 405 км контролируются непризнанной Приднестровской Молдавской
                 Республикой) и Румынией (608 км по суше, морские границы урегулированы). Протяжённость береговой линии —
-                2835 км. Длина морской границы составляет 1355 км[20] (по Чёрному морю — 1056,5 км; по Азовскому морю —
+                2835 км. Длина морской границы составляет 1355 км (по Чёрному морю — 1056,5 км; по Азовскому морю —
                 249,5 км.
             </p>
         </div>
