--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/russia/gos-simvolika/style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
     <link rel="shortcut icon" href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"
         image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
