--- a/country/belarus/gos-simvolika/index.html
+++ b/country/belarus/gos-simvolika/index.html
@@ -154,7 +154,7 @@
                 <p> Наша любимая мама-Отчизна,</p>
                 <p> Вечно живи и цвети, Беларусь!</p>
                 <br><br><br><br>
-                <h3>Гим Республики Беларусь</h3>
+                <h3>Гимн Республики Беларусь</h3>
                 <audio src="gimn-of-Belarus.mp3" controls></audio>
 
 
