--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
 
-    <title>Постсоветское пространство</title>
+    <title>Постсоветское пространство - сайт о трех братьях</title>
 
 </head>
 
@@ -28,6 +28,7 @@
         <div class="container">
 
             <h1>Ельцину исполнилось бы 90 лет</h1>
+            <hr>
             <img src="country/russia/info/putin_mogila_elcina.jpg" alt="">
             <p>
                 Бори́с Николаевич Ельцин — советский и российский партийный, государственный и политический
