--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -82,13 +82,17 @@
             </p>
             <br>
         </div>
-        <audio controls>
-            <source src="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3"
-                type="audio/mpeg">
-            Тег audio не поддерживается вашим браузером.
-            <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3">Скачайте
-                музыку</a>.
-        </audio>
+        <div class="terd">
+            <audio controls>
+
+                <source src="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3"
+                    type="audio/mpeg">
+                Тег audio не поддерживается вашим браузером.
+                <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3">Скачайте
+                    музыку</a>.
+            </audio>
+
+        </div>
     </main>
     <footer>
         <div class="container">
