--- a/country/belarus/gos-simvolika/index.html
+++ b/country/belarus/gos-simvolika/index.html
@@ -187,7 +187,7 @@
                 </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/belarus/">Основная</a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/">Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/">Государственные символы
                         </a></p>
 
