--- a/country/belarus/index.html
+++ b/country/belarus/index.html
@@ -210,7 +210,7 @@
                 Сша хотя подчинить себе Беларусь. Но Беларусь не сдается как и Россия.
             </p>
 
-
+<br>
         </div>
     </main>
     <footer>
@@ -219,9 +219,7 @@
             <div class="row">
 
 
-                <div class="col-sm">
-                    <img src="gos-simvolika/flag-of-Belarus.png" alt="">
-                </div>
+             
                 <div class="col-sm">
                     &copy; 2020-2021 ООО "СССР"
                 </div>
@@ -246,14 +244,12 @@
                 </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></b></p>
-                    <p><a href="/political-na-postsovet-space/country/belarus/">Основная</a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/">Основная информация</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/">Государственные символы
                         </a></p>
 
                 </div>
-                <div class="col-sm">
-                    <img src="gos-simvolika/gerb-of-Belarus.png" alt="">
-                </div>
+              
             </div>
             <hr>
         </div>
