--- a/country/lnr/gos-simvolika/index.html
+++ b/country/lnr/gos-simvolika/index.html
@@ -20,6 +20,7 @@
         <a href="/political-na-postsovet-space/news">Последние новости</a>
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
+            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
@@ -28,7 +29,7 @@
         </div>
         <div id="nav-country">
             <a href="/political-na-postsovet-space/country/lnr/">Основная информация</a>
-            <a href="gos-simvolika" id="id">Государственная символика</a>
+            <a href="" id="id">Государственная символика</a>
         </div>
     </header>
     <main>
@@ -196,6 +197,7 @@
 
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
