--- a/country/russia/president/index.html
+++ b/country/russia/president/index.html
@@ -20,6 +20,7 @@
         <a href="/political-na-postsovet-space/news">Последние новости</a>
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
+            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/russia/" id="id">Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
@@ -665,6 +666,7 @@
                 </div>
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
