--- a/country/dni/index.html
+++ b/country/dni/index.html
@@ -20,11 +20,13 @@
         <a href="/political-na-postsovet-space/news">Последние новости</a>
         <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
         <div>
+            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
             <a href="/political-na-postsovet-space/country/dni/" id="id">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
+    
         </div>
     </header>
     <main>
@@ -137,6 +139,7 @@
 
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
