--- a/country/index.html
+++ b/country/index.html
@@ -276,12 +276,11 @@
                 </div>
 
                 <div class="col-sm">
-                    <p> <b>Для пользователя</b></p>
-                    <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
-                    <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
-                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файлы</a></p>
-                    <p></p>
+                    <p> <b><a href="/political-na-postsovet-space/for-users/index.html"> Для пользователя </a></b></p>
+                    <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
 
                     <div class="preside">
                         <img src="ussr/Gorbachev_(cropped).png" alt="">
