--- a/country/dni/index.html
+++ b/country/dni/index.html
@@ -130,11 +130,11 @@
                     &copy; 2020-2021 ООО "СССР"
                 </div>
                 <div class="col-sm">
-                    <p> <b>Для пользователя</b></p>
-                    <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
-                    <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
-                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файлы</a></p>
+                    <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
+                    <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
 
                 <div class="col-sm country">
