--- a/for-users/legal/confidential/index.html
+++ b/for-users/legal/confidential/index.html
@@ -25,11 +25,7 @@
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
-        <div id="nav-country">
-            <a href="/political-na-postsovet-space/legal/">Пользоваетльское соглашение</a>
-            <a href="" id="id">Политика Конфиденциальности</a>
-
-        </div>
+  
     </header>
     <main>
         <div class="container">
@@ -126,7 +122,7 @@
 
                 </li>
                 <br><br><br>
-                <li>
+                <li id="5">
                     <b>
                         Обновление настоящей Политики
 
@@ -162,11 +158,11 @@
                     &copy; 2020-2021 ООО "СССР"
                 </div>
                 <div class="col-sm">
-                    <p> <b>Для пользователя</b></p>
-                    <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
-                    <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
-                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файлы</a></p>
+                    <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
+                    <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
 
                 <div class="col-sm country">
