--- a/for-users/legal/index.html
+++ b/for-users/legal/index.html
@@ -25,11 +25,7 @@
             <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
-        <div id="nav-country">
-            <a href="" id="id">Пользоваетльское соглашение</a>
-            <a href="confidential/">Политика Конфиденциальности</a>
-
-        </div>
+    
     </header>
     <main>
         <div class="container">
@@ -49,7 +45,7 @@
                     </ol>
                 </li>
                 <br>
-                <li>
+                <li id="2">
                     <b>Ответственность</b>
                     <ol>
                         <li>Мы не несёем ответственности за то, что вы скачиваете и изменяите контент.</li>
@@ -134,11 +130,11 @@
                     &copy; 2020-2021 ООО "СССР"
                 </div>
                 <div class="col-sm">
-                    <p> <b>Для пользователя</b></p>
-                    <p><a href="/political-na-postsovet-space/contacts/">Поддержка</a></p>
-                    <p><a href="/political-na-postsovet-space/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/legal/confidential/">Политика Конфиденциальности</a></p>
-                    <p><a href="/political-na-postsovet-space/putin/m/">Скачать файлы</a></p>
+                    <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
+                    <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
 
                 <div class="col-sm country">
