--- a/country/ukraine/gos-simvolika/index.html
+++ b/country/ukraine/gos-simvolika/index.html
@@ -82,17 +82,17 @@
                 утверждён 6 марта 2003 года.
             </p>
             <br>
-        </div>
-        <div class="terd">
-            <audio controls>
 
-                <source src="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3"
-                    type="audio/mpeg">
-                Тег audio не поддерживается вашим браузером.
-                <a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3">Скачайте
-                    музыку</a>.
-            </audio>
+            <div class="terd">
+                <div class="trf">
+                    <audio controls>
 
+                        <source src="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3"
+                            type="audio/mpeg">
+                        Тег audio не поддерживается вашим браузером.
+                    </audio>
+                </div>
+            </div>
         </div>
     </main>
     <footer>
@@ -105,7 +105,8 @@
                     <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
                     <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
-                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
+                            Конфиденциальности</a></p>
                     <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
                 </div>
 
