--- a/for-users/files/index.html
+++ b/for-users/files/index.html
@@ -4,142 +4,182 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/for-users/contacts/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
+        integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Скачать файл</title>
 </head>
 
 <body>
     <header>
-        <a href="/political-na-postsovet-space"><button>Главная</button></a>
-        <br>
-
-        <a href="/political-na-postsovet-space/news"><button>последние новости</button></a>
-        <br>
-        <a href="/political-na-postsovet-space/country/"><button>Страны</button></a>
-
-        <br>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
+        <a href="/political-na-postsovet-space/news">Последние новости</a>
+        <a href="/political-na-postsovet-space/country/">Страны</a>
+        <div>
+            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
+            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
+            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
+            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
+        </div>
+  
     </header>
     <main>
-        <video src="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" controls
-            poster="/political-na-postsovet-space/FfFOMkwmWEvIFB2vPI37LXJ1t0Yd1q72.jpg" style="width: 100%;"></video>
-        <a href="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4"
-            download><button>Скачать</button></a>
+        <div class="container">
+            <video src="/political-na-postsovet-space/KVXDPAMAOYlhUuw3puYG3txePUq7Quvn.mp4" controls
+                poster="/political-na-postsovet-space/FfFOMkwmWEvIFB2vPI37LXJ1t0Yd1q72.jpg"
+                style="width: 100%;"></video>
+         <h1>Скачать файлы со страниц:</h1>
+         <hr>
+
+            <ul>
+                <li>
+                    Ресублика Беларусь:
+                    <ul>
+                        <li><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png">Скачать
+                                герб РБ</a>
+                                ;
+                        </li>
+                        <li><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png">Скачать
+                                Флаг
+                                РБ
+                            </a>
+                            ;
+                        </li>
+                        <li>
+                            <a href="/political-na-postsovet-space/country/belarus/Lukashenko.jpg">Скачать Фото
+                                Лукашенко</a>
+                                ;
+                        </li>
+                        <li>
+                            <a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gimn-of-Belarus.mp3">Скачать
+                                Гимн Белоруссии</a>;
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    ДНР:
+                    <ul>
+                        <li><a href="/political-na-postsovet-space/country/dni/gos-simvolika/flag-of-Dni.png">Скачать
+                                Флаг ДНР</a>;
+                        </li>
+                        <li>
+                            <a href="/political-na-postsovet-space/country/dni/gos-simvolika/gerb-of-Dni.png">Скачать
+                                Герб ДНР</a>;
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    ЛНР:
+                    <ul>
+                        <li><a href="/political-na-postsovet-space/country/lnr/gos-simvolika/flag-of-Lnr.png">Скачать
+                                Фалг ЛНР</a>;</li>
+
+                        <li><a href="/political-na-postsovet-space/country/lnr/gos-simvolika/gerb-of-Lnr.png">Скачать
+                                Герб ЛНР</a>;</li>
+
+                        <li><a href="/political-na-postsovet-space/country/lnr/gos-simvolika/gimn-of-Lnr.mp3">Скачать
+                                Гимн ЛНР</a>;</li>
+                    </ul>
+                </li>
+                <li>
+                    Российская Федерация:
+                    <ul>
+                        <li><a
+                                href="/political-na-postsovet-space/country/russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg">Скачать
+                                Фото Путина</a>;</li>
+
+                        <li> <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3"
+                                download>Скачать Гимн России (хор)</a>;</li>
+
+                        <li><a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
+                                download>Скачать Гимн России</a>;</li>
+
+
+                        <li><a href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png">Скачать
+                                Флаг РФ</a>;</li>
+
+                        <li> <a href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png">Скачать
+                                Герб РФ</a>;</li>
+
+                        <li> <a href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-RSFSR.png">Скачать
+                                флаг РСФСР</a>;</li>
+
+                        <li><a href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-RSFSR.png">Скачать
+                                герб РСФСР</a>;</li>
+
+
+                        <li><a
+                                href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia-before-1993.png">Скачать
+                                флаг РФ до 1993</a>;</li>
+
+                        <li><a
+                                href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia-before-1993.png">Скачать
+                                флаг РФ до 1993</a>;</li>
+                    </ul>
+                </li>
+                <li>
+                    СССР:
+                    <ul>
+                        <li><a href="/political-na-postsovet-space/country/ussr/flag-of-USSR.png">Скачать Флаг
+                                СССР</a>;</li>
+
+                        <li><a href="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png">Скачать Герб
+                                СССР</a>;</li>
+
+                        <li><a href="/political-na-postsovet-space/country/ussr/Gorbachev_(cropped).png">Скачать
+                                Фото
+                                Горбачёва</a>;</li>
+
+                        <li><a href="/political-na-postsovet-space/country/ussr/gimn-of-USSR.mp3">Скачать Гимн
+                                СССР</a>;</li>
+                    </ul>
+                </li>
+                <li>
+                    Украина:
+                    <ul>
+                        <li><a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3"
+                                download>Скачать Гимн Украины.</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
         <br>
-        <table border="1" rules="all" width="100%">
-            <tr>
-                <td rowspan="4">Ресублика Беларусь</td>
-                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gerb-of-Belarus.png"
-                        download><button>Скачать
-                            герб РБ</button></a></td>
+    </main>
+    <footer>
 
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/flag-of-Belarus.png"><button>Скачать
-                            Флаг
-                            РБ</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/belarus/Lukashenko.jpg"><button>Скачать Фото
-                            Лукашенко</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/belarus/gos-simvolika/gimn-of-Belarus.mp3"><button>Скачать
-                            Гимн Белоруссии</button></a></td>
-            </tr>
-            <tr>
-                <td rowspan="2">ДНР</td>
-                <td><a href="/political-na-postsovet-space/country/dni/gos-simvolika/flag-of-Dni.png"><button>Скачать
-                            Флаг ДНР</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/dni/gos-simvolika/gerb-of-Dni.png"><button>Скачать
-                            Герб ДНР</button></a></td>
-            </tr>
-            <tr>
-                <td rowspan="3">ЛНР</td>
-                <td><a href="/political-na-postsovet-space/country/lnr/gos-simvolika/flag-of-Lnr.png"><button>Скачать
-                            Фалг ЛНР</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/lnr/gos-simvolika/gerb-of-Lnr.png"><button>Скачать
-                            Герб ЛНР</button></a></td>
-            </tr>
-            <tr>
-                <td><a href="/political-na-postsovet-space/country/lnr/gos-simvolika/gimn-of-Lnr.mp3"><button>Скачать
-                            Гимн ЛНР</button></a></td>
-            </tr>
-            <tr>
-                <td>Российская Федерация</td>
-                <td><a
-                        href="/political-na-postsovet-space/country/russia/800px-Vladimir_Putin_11-10-2020_(cropped).jpg"><button>Скачать
-                            Фото Путина</button></a>
-                    <br>
-                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-choir.mp3"
-                        download><button>Скачать Гимн России (хор)</button></a><br>
+        <div class="container">
+            <hr>
+            <div class="row">
+                <div class="col-sm">
+                    &copy; 2020-2021 ООО "СССР"
+                </div>
+                <div class="col-sm">
+                    <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
+                    <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
+                            Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
+                </div>
 
-                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/anthem-instrumental.mp3"
-                        download><button>Скачать Гимн России </button></a>
-                    <br>
-
-                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia.png"><button>Скачать
-                            Флаг РФ</button></a>
-                    <br>
-                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia.png"><button>Скачать
-                            Герб РФ</button></a>
-                    <br>
-                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-RSFSR.png"><button>Скачать
-                            флаг РСФСР</button></a>
-                    <br>
-                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-RSFSR.png"><button>Скачать
-                            герб РСФСР</button></a>
-
-                    <br>
-                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/flag-of-Russia-before-1993.png"><button>Скачать
-                            флаг РФ до 1993</button></a>
-
-                    <br>
-                    <a href="/political-na-postsovet-space/country/russia/gos-simvolika/gerb-of-Russia-before-1993.png"><button>Скачать
-                            флаг РФ до 1993</button></a>
-                </td>
-            </tr>
-            <tr>
-                <td>СССР</td>
-                <td><a href="/political-na-postsovet-space/country/ussr/flag-of-USSR.png"><button>Скачать Флаг
-                            СССР</button></a>
-                    <br>
-                    <a href="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png"><button>Скачать Герб
-                            СССР</button></a>
-                    <br>
-                    <a href="/political-na-postsovet-space/country/ussr/Gorbachev_(cropped).png"><button>Скачать Фото
-                            Горбачёва</button></a>
-                    <br>
-                    <a href="/political-na-postsovet-space/country/ussr/gimn-of-USSR.mp3"><button>Скачать Гимн
-                            СССР</button></a>
-                </td>
-            </tr>
-            <tr>
-                <td>Украина</td>
-                <td><a href="/political-na-postsovet-space/country/ukraine/gos-simvolika/Anthem-of-Ukraine.mp3" download><button>Скачать Гимн Украины</button></a>
-                  
-                </td>
-            </tr>
-
-
-
-
-        </table>
-        <br><br><br><br><br>
-        <a href="Ski Mask The Slump God - Take A Step Back.mp3" download><button>Take A Step Back</button></a><br>
-        <a href="XXXTentacion - Hope.mp3" download><button>Hope</button></a><br>
-        <a href="XXXTentacion - Look At Me.mp3" download><button>Look At Me</button></a><br>
-        <a href="XXXTentacion - RIP Roach feat. $ki Mask The Slump God.mp3" download><button>RIP Roach feat. $ki Mask
-                The Slump God</button></a><br>
-        <footer>
-
-            <a href="/political-na-postsovet-space/contacts/"><button>Поддержка</button></a>
-            <a href="/political-na-postsovet-space/legal/"><button>Правовая информация</button></a>
-        </footer>
-        <footer>&copy; 2020-2021 ООО "СССР"</footer>
+                <div class="col-sm country">
+                    <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p>  <a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
+                    <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
+        integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
