--- a/for-users/index.html
+++ b/for-users/index.html
@@ -19,6 +19,7 @@
         <a href="/political-na-postsovet-space/news">Последние новости</a>
         <a href="/political-na-postsovet-space/country/">Страны</a>
         <div>
+            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
