--- a/for-users/legal/confidential/index.html
+++ b/for-users/legal/confidential/index.html
@@ -19,6 +19,7 @@
         <a href="/political-na-postsovet-space/news">Последние новости</a>
         <a href="/political-na-postsovet-space/country/">Страны</a>
         <div>
+            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
             <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
             <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
             <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
@@ -167,6 +168,7 @@
 
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p>  <a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
                     <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
                     <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
                     <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
