--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/vremenno.css">
-    <title>рвздел СССР в разработке</title>
+    <title>Раздел СССР в разработке</title>
 </head>
 <body>
     Данный раздел находится в разработке. Потерпите, пожалуйста!!! А пока перейдите на  <a href="/political-na-postsovet-space/">Главную</a> страницу
