--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="gerb-of-USSR.png" image="/x-icon">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/vremenno.css">
-    <title>Раздел СССР в разработке</title>
+    <title>Раздел СССР в разработке | Section of the USSR in development</title>
 </head>
 <body>
     Данный раздел находится в разработке. Потерпите, пожалуйста!!! А пока перейдите на  <a href="/political-na-postsovet-space/">Главную</a> страницу
