--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -1,17 +1,116 @@
+<!--    <title>Раздел СССР в разработке | Section of the USSR in development</title>-->
+<!--Данный раздел находится в разработке. Потерпите, пожалуйста!!! А пока перейдите на  <a href="/political-na-postsovet-space/">Главную</a> страницу
+    <hr>
+    This section is under development. Please be patient!!! In the meantime, go to the <a href="/political-na-postsovet-space/">main page</a>-->
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="gerb-of-USSR.png" image="/x-icon">
-    <link rel="stylesheet" href="/political-na-postsovet-space/country/vremenno.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+    <link rel="shortcut icon" href="flag-of-USSR.png">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
+        integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Раздел СССР в разработке | Section of the USSR in development</title>
+
 </head>
+
 <body>
-    Данный раздел находится в разработке. Потерпите, пожалуйста!!! А пока перейдите на  <a href="/political-na-postsovet-space/">Главную</a> страницу
-    <hr>
-    This section is under development. Please be patient!!! In the meantime, go to the <a href="/political-na-postsovet-space/">main page</a>
- 
+    <header>
+        <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
+        <a href="/political-na-postsovet-space/news">Последние новости</a>
+        <a href="/political-na-postsovet-space/country/" id="id">Страны</a>
+        <div>
+            <a href="/political-na-postsovet-space/country/ussr/" id="id">СССР</a>
+            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
+            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
+            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
+            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
+            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
+        </div>
+
+    </header>
+    <main>
+        <div class="container">
+            <h1>СССР</h1>
+            <hr>
+            Данный раздел находится в разработке. Потерпите, пожалуйста!!! А пока перейдите на <a
+                href="/political-na-postsovet-space/">Главную</a> страницу
+            <hr>
+            This section is under development. Please be patient!!! In the meantime, go to the <a
+                href="/political-na-postsovet-space/">main page</a>
+            <div class="photo">
+                <img src="gerb-of-USSR.png" alt="">
+                <figcaption>Герб СССР <br> coat of arms of the USSR</figcaption>
+            </div>
+            <br>
+
+
+        </div>
+
+    </main>
+    <footer>
+
+
+
+
+        <div class="container">
+            <br>
+            <!-- Put this script tag to the <head> of your page -->
+            <script type="text/javascript" src="https://vk.com/js/api/openapi.js?168"></script>
+
+            <script type="text/javascript">
+                VK.init({ apiId: 7752244, onlyWidgets: true });
+            </script>
+
+            <!-- Put this div tag to the place, where the Like block will be -->
+            <div id="vk_like"></div>
+            <script type="text/javascript">
+                VK.Widgets.Like("vk_like", { type: "button" });
+            </script>
+            <hr>
+            <div class="row">
+
+
+                <div class="col-sm">
+                    &copy; 2020-2021 ООО "СССР"
+                </div>
+                <div class="col-sm">
+                    <p> <b><a href="/political-na-postsovet-space/for-users/"> Для пользователя </a></b></p>
+                    <p><a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/">Правовая информация</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика
+                            Конфиденциальности</a></p>
+                    <p><a href="/political-na-postsovet-space/for-users/files/">Скачать файлы</a></p>
+                </div>
+
+                <div class="col-sm country">
+                    <p><b><a href="/political-na-postsovet-space/country/">Страны</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/">СССР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/belarus/">Беларусь</a></p>
+                    <p><a href="/political-na-postsovet-space/country/russia/">Россия</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ukraine/">Украина</a></p>
+                    <p><a href="/political-na-postsovet-space/country/dni/">ДНР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/lnr/">ЛНР</a></p>
+
+                </div>
+                <div class="col-sm country">
+                    <p><b><a href="/political-na-postsovet-space/country/ussr/">СССР</a></b></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/">Основная информация</a></p>
+                </div>
+
+
+            </div>
+
+            <br>
+
+        </div>
+    </footer>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/js/bootstrap.bundle.min.js"
+        integrity="sha384-BOsAfwzjNJHrJ8cZidOg56tcQWfp6y72vEJ8xQ9w6Quywb24iOsW913URv1IS4GD"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
