--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
-    <link rel="shortcut icon" href="flag-of-USSR.png">
+    <link rel="shortcut icon" href="gerb-of-USSR.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Раздел СССР в разработке | Section of the USSR in development</title>
