--- a/country/ussr/Leaders-of-the-USSR/index.html
+++ b/country/ussr/Leaders-of-the-USSR/index.html
@@ -8,12 +8,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/ussr/style.css">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
     <link rel="shortcut icon" href="gerb-of-USSR.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
-    <title>Раздел СССР в разработке | Section of the USSR in development</title>
+    <title>Раздел Руководители СССР в разработке | Section Leaders of the USSR in development</title>
 
 </head>
 
@@ -31,30 +31,29 @@
             <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
         </div>
         <div id="nav-country">
-            <a href="/political-na-postsovet-space/country/ussr/" id="id">Основная информация</a>
-            <a href="gos-simvolika/">Государственная символика</a>
-            <a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a>
+            <a href="/political-na-postsovet-space/country/ussr/">Основная информация</a>
+            <a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">Государственная символика</a>
+            <a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/" id="id">Руководители СССР</a>
         </div>
 
     </header>
     <main>
         <div class="container">
-            <h1>СССР</h1>
+            <h1>Руководители СССР</h1>
             <hr>
-            <div class="photol">
-                <img src="Leaders-of-the-USSR/QZWabBMFAUg.jpg" alt="">
-                <figcaption>Сталин ждет появления СССР <br> Stalin is waiting for the appearance of the USSR</figcaption>
-            </div>
             Данный раздел находится в разработке. Потерпите, пожалуйста!!! А пока перейдите на <a
                 href="/political-na-postsovet-space/">Главную</a> страницу
             <hr>
             This section is under development. Please be patient!!! In the meantime, go to the <a
                 href="/political-na-postsovet-space/">main page</a>
             <div class="photo">
-                <img src="gerb-of-USSR.png" alt="">
+                <img src="/political-na-postsovet-space/country/ussr/gerb-of-USSR.png" alt="">
                 <figcaption>Герб СССР <br> coat of arms of the USSR</figcaption>
             </div>
-            
+            <div class="plotnost">
+                <img src="scale_1200.jpg" alt="">
+                <figcaption>Мужик с медведем очень сильно ждут появления раздела СССР <br> The man with the bear is very much waiting for the appearance of the partition of the USSR</figcaption>
+            </div>
             <br>
 
 
@@ -109,8 +108,10 @@
                 <div class="col-sm country">
                     <p><b><a href="/political-na-postsovet-space/country/ussr/">СССР</a></b></p>
                     <p><a href="/political-na-postsovet-space/country/ussr/">Основная информация</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">Государственные символы</a></p>
-                    <p><a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a></p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/gos-simvolika/">Государственные символы</a>
+                    </p>
+                    <p><a href="/political-na-postsovet-space/country/ussr/Leaders-of-the-USSR/">Руководители СССР</a>
+                    </p>
                 </div>
 
 
