--- a/country/ussr/index.html
+++ b/country/ussr/index.html
@@ -54,7 +54,50 @@
                 <img src="gerb-of-USSR.png" alt="">
                 <figcaption>Герб СССР <br> coat of arms of the USSR</figcaption>
             </div>
-            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio quod qui natus sint tempora enim voluptatum
+                ea delectus libero at, error consectetur, molestias soluta et assumenda nam accusamus dolorem
+                perspiciatis?
+                Similique cum quaerat velit sit dolore libero, pariatur laboriosam architecto voluptates totam voluptate
+                voluptatibus dolorum natus nobis quasi vitae dolores eligendi porro dignissimos, itaque a. Quod dicta
+                officia vitae porro?
+                Facilis itaque similique ipsum, qui harum numquam culpa, sunt nesciunt aliquid temporibus vel fugit
+                impedit non. Assumenda id ipsum pariatur ad distinctio saepe, expedita nesciunt, ducimus dolorum
+                reprehenderit rerum? Ex!
+                Debitis, harum quaerat ut iste dolor repellendus obcaecati qui labore soluta! Fugit odio ipsam
+                similique? Rerum corporis tempora at laboriosam dignissimos exercitationem pariatur nobis neque
+                expedita. Quae porro ut cum.
+                Hic vel, ut dolor ea suscipit, exercitationem magnam aspernatur facere itaque totam corporis? Nostrum
+                temporibus explicabo quasi nobis modi sunt excepturi sit sed ut labore perspiciatis iusto, architecto,
+                magnam repellat?
+                Qui praesentium vitae accusamus recusandae autem esse sit non sapiente? Eos ut dolores a nihil, sit amet
+                ullam excepturi consequuntur vitae qui hic. Veritatis explicabo, sunt facere minus sequi quos.
+                Soluta laboriosam repellendus rerum dolor facere necessitatibus, ipsum, repudiandae odio consequatur
+                praesentium perferendis labore, debitis reiciendis cupiditate. Iusto officiis nam officia, dolores in
+                eligendi velit quasi nihil nulla! Suscipit, modi.
+                Accusantium cupiditate minus id vitae, quod vel voluptate unde laboriosam! Commodi amet expedita laborum
+                quibusdam dicta est vero ullam nihil alias sed, placeat delectus consequatur magnam illo iste
+                accusantium excepturi.
+                Dolorem, consequuntur ad incidunt at enim maxime voluptatem mollitia, praesentium in corporis qui. Nisi
+                facilis aliquam voluptate iusto, non fugiat unde itaque delectus dolores, provident, molestias aliquid
+                aspernatur praesentium inventore.
+                Praesentium facilis aliquid libero modi ipsam perferendis quisquam veritatis amet tempora sit neque iste
+                deserunt quidem sapiente mollitia corrupti eius repellat, dolore enim nesciunt ex fugit? Dolore, facere
+                praesentium. Maiores!
+                Eligendi et harum laudantium dicta soluta voluptates! Debitis suscipit illo deleniti fugit odit numquam
+                commodi temporibus, doloremque totam, veniam aliquid adipisci aspernatur optio atque cupiditate
+                dignissimos hic. Ratione, numquam atque.
+                Necessitatibus quasi ut laborum sit illo dolorum, eius rem recusandae blanditiis, consequuntur, sapiente
+                impedit? Sint adipisci incidunt deserunt eaque! Ratione, delectus repellendus. Inventore similique, iste
+                error et saepe dolores laudantium?
+                Quisquam velit, impedit temporibus esse sint consectetur culpa quasi laboriosam, harum delectus labore
+                facilis doloremque explicabo assumenda eligendi vero similique a tempora. Laborum nobis libero magnam
+                fugit corrupti deserunt debitis.
+                Necessitatibus saepe placeat enim maiores esse sequi optio quis fuga at reiciendis cupiditate vel
+                delectus non, sunt, dolor exercitationem qui dignissimos. Placeat iusto incidunt tempora debitis
+                delectus repellat doloremque tempore.
+                Explicabo nihil ipsam voluptas accusamus esse dolores, dolorum nesciunt, unde provident, blanditiis rem
+                dolor. Quo incidunt dignissimos sit facere quia? Nobis recusandae cum ipsum in voluptatum! Iure dolor ut
+                fugiat.</p>
             <br>
 
 
