--- a/for-users/legal/index.html
+++ b/for-users/legal/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="confidential/style.css">
+    <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
     <link rel="shortcut icon" href="confidential/RKN.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -63,10 +64,10 @@
                         <li>Мы предирживаемся Законодательству Российской Федерации и Республики Беларусь.</li>
                         <li>Исключения</li>
                         <ol>
-                            <li>Использование Пользователем элементов содержания сервисов, а также любого контента для
+                            <li>Использование Пользователем элементов содержания сайта, а также любого контента для
                                 личного некоммерческого использования, допускается при условии сохранения всех знаков
                                 охраны авторского права, смежных прав, товарных знаков, других уведомлений об авторстве,
-                                сохранения имени (или псевдонима) автора/наименования правообладателя в неизменном виде,
+                                сохранения имени (или псевдонима) автора наименования правообладателя в неизменном виде,
                                 сохранении соответствующего объекта в неизменном виде. Исключение составляют случаи,
                                 прямо предусмотренные законодательством РФ или пользовательским соглашением.</li>
                         </ol>
