--- a/country/russia/index.html
+++ b/country/russia/index.html
@@ -39,7 +39,7 @@
             <h1 id="russia">Россия</h1>
             <hr>
             <p>
-                Росси́я, другое официальное название — Росси́йская Федера́ция (РФ), — государство в Восточной
+                Россия, другое официальное название — Российская Федерация (РФ), — государство в Восточной
                 Европе и Северной Азии. Территория России в её конституционных границах составляет 17 125 191
                 км<sup>2</sup>;
                 население страны (в пределах её заявленной территории) составляет 146 748 590 чел. (на 2020).
@@ -80,7 +80,7 @@
                 Наша страна имеет 25 границ (18 сухопутных и 7 морских).
             </p>
             <p>
-                Россия — многонациональное государство с широким этнокультурным многообразием. Бо́льшая часть
+                Россия — многонациональное государство с широким этнокультурным многообразием. Большая часть
                 населения (около 75 %) относит себя к православию, что делает Россию страной с самым многочисленным
                 православным населением в мире.
             </p>
