--- a/country/ukraine/index.html
+++ b/country/ukraine/index.html
@@ -38,12 +38,12 @@
     <main>
         <div class="container">
             <div class="dr">
-                <h1>Украи́на</h1>
+                <h1>Украина</h1>
                 <hr>
 
 
                 <p>
-                    Украи́на — государство в Восточной и частично Центральной Европе. Население,
+                    Украина — государство в Восточной и частично Центральной Европе. Население,
                     по итогам переписи 2001 года, составляло 48 240 902 постоянных жителя и 48 457 102 человека
                     наличного населения, по оценкам государственной службы статистики Украины на 1 сентября 2020 года —
                     41 554 361 постоянных жителя и 41 723 998 человек наличного населения. Территория в пределах
