--- a/for-users/contacts/index.html
+++ b/for-users/contacts/index.html
@@ -7,6 +7,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
+  
     <link rel="shortcut icon" href="/political-na-postsovet-space/serp.ico" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
@@ -17,8 +18,15 @@
 <body>
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
-        <a href="/political-na-postsovet-space/country/">Страны</a>
+        <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
+      
+        <div>
+            <a href="/political-na-postsovet-space/for-users/contacts/" id="id">Поддержка</a>
+            <a href="/political-na-postsovet-space/for-users/legal/">Пользовательское соглашение</a>
+            <a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a>
+            <a href="/political-na-postsovet-space/for-users/files/">Скачать Файлы</a>
+        </div>
+    
     </header>
     <main>
         <div class="container">
