--- a/for-users/legal/index.html
+++ b/for-users/legal/index.html
@@ -17,15 +17,13 @@
 <body>
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
-        <a href="/political-na-postsovet-space/country/">Страны</a>
+        <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
+      
         <div>
-            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
-            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
-            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
-            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
+            <a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a>
+            <a href="/political-na-postsovet-space/for-users/legal/" id="id">Пользовательское соглашение</a>
+            <a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a>
+            <a href="/political-na-postsovet-space/for-users/files/">Скачать Файлы</a>
         </div>
     
     </header>
