--- a/for-users/index.html
+++ b/for-users/index.html
@@ -7,7 +7,7 @@
 
     <link rel="stylesheet" href="contacts/style.css">
     <link rel="stylesheet" href="/political-na-postsovet-space/country/main.css">
-    <link rel="shortcut icon" href="confidential/RKN.png" image="/x-icon">
+    <link rel="shortcut icon" href="legal/confidential/RKN.png" image="/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha2/css/bootstrap.min.css"
         integrity="sha384-DhY6onE6f3zzKbjUPRc2hOzGAdEf4/Dz+WJwBvEYL/lkkIsI3ihufq9hk9K4lVoK" crossorigin="anonymous">
     <title>Для пользователя</title>
@@ -17,17 +17,14 @@
 <body>
     <header>
         <a href="/political-na-postsovet-space/">Постсоветское пространство</a>
-        <a href="/political-na-postsovet-space/news">Последние новости</a>
-        <a href="/political-na-postsovet-space/country/">Страны</a>
+        <a href="/political-na-postsovet-space/for-users/">Для Пользователя</a>
+      
         <div>
-            <a href="/political-na-postsovet-space/country/ussr/">СССР</a>
-            <a href="/political-na-postsovet-space/country/belarus/">Беларусь</a>
-            <a href="/political-na-postsovet-space/country/russia/">Российская Федерация</a>
-            <a href="/political-na-postsovet-space/country/ukraine/">Украина</a>
-            <a href="/political-na-postsovet-space/country/dni/">ДНР</a>
-            <a href="/political-na-postsovet-space/country/lnr/">ЛНР</a>
+            <a href="/political-na-postsovet-space/for-users/contacts/">Поддержка</a>
+            <a href="/political-na-postsovet-space/for-users/legal/">Пользовательское соглашение</a>
+            <a href="/political-na-postsovet-space/for-users/legal/confidential/">Политика Конфиденциальности</a>
+            <a href="/political-na-postsovet-space/for-users/files/">Скачать Файлы</a>
         </div>
-
     </header>
     <main>
         <div class="container">
@@ -44,8 +41,8 @@
             <hr>
             <ol>
                 <li>Принаписании через виджет Вк вы должны быть авторизованы в ВК в своём браузере</li>
-                <li>Если вы нам пишете через форму обратной связи, то обратите внимание что мы ваши данные (Фамилия,
-                    Имя, e-mail) мы не сохраняем. Они нужны для того чтобы ответить вам.
+                <li>Если вы нам пишете через форму обратной связи, то обратите внимание, что мы ваши данные (Фамилия,
+                    Имя, e-mail) не сохраняем. Они нужны для того чтобы ответить вам.
                 </li>
             </ol>
             <h2>Небольшая информация для раздела <a href="files/" class="sos">скачать файлы</a></h2>
